- Modify/Upgrade: delete realms and twitch in mc. - Upgrade: use Qodana.